--- a/localisation/country_california_l_english.yaml
+++ b/localisation/country_california_l_english.yaml
@@ -1,8 +1,8 @@
 ﻿l_english:
-CAL_democratic:5 "Virginia"
+CAL_democratic:5 "The United Pacific States"
 CAL_democratic_DEF:5 "The Virginia"
 CAL_democratic_ADJ:5 "Virginia citizen"
-CAL_fascism:5 "Virginia"
+CAL_fascism:5 "The Califonian Empire"
 CAL_fascism_DEF:5 "The Virginia"
 CAL_fascism_ADJ:5 "Virginia citizen"
 CAL_communism:5 "Virginia People's Republic"
