--- a/localisation/country_GermanP_l_english.yaml
+++ b/localisation/country_GermanP_l_english.yaml
@@ -1,5 +1,5 @@
 ﻿l_english:
-BPG_democratic:5 "The United Pacific States"
+BPG_democratic:5 "The United German States"
 BPG_democratic_DEF:5 "The Virginia"
 BPG_democratic_ADJ:5 "Virginia citizen"
 BPG_fascism:5 "The Eifonian Empire"
