--- a/localisation/country_Poland_l_english.yml
+++ b/localisation/country_Poland_l_english.yml
@@ -5,9 +5,12 @@ POL_democratic_ADJ:5 "Polish"
 POL_fascism:5 "Polish-Lithuanian State"
 POL_fascism_DEF:5 "Polish Empire"
 POL_fascism_ADJ:5 "Polish"
-POL_communism:5 "Virginia People's Republic"
-POL_communism_DEF:5 "The Virginia"
-POL_communism_ADJ:5 "Virginia citizen"
-POL_neutrality:5 "Virginia"
-POL_neutrality_DEF:5 "The Virginia"
-POL_neutrality_ADJ:5 "Virginia citizen"
+POL_communism:5 "Polish-Lithuanian People's Republic"
+POL_communism_DEF:5 "Polish People's Republic"
+POL_communism_ADJ:5 "Polish"
+POL_neutrality:5 "Kingdom of Poland"
+POL_neutrality_DEF:5 "Kingdom of Poland"
+POL_neutrality_ADJ:5 "Polish"
+POL_AbsoluteMonarchy:5"Kingdom of Poland and the Grand Duchy of Lithuania"
+POL_AbsoluteMonarchy_DEF:5"Kingdom of Poland"
+POL_AbsoluteMonarchy_ADJ:5"Polish"
